--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-VITE_API_URL=https://gomaster-backend-fh3ewfxxvq-du.a.run.app/api
+VITE_API_URL=https://gomaster-backend-932863380761.asia-northeast3.run.app/api
